fix broken css link, add internet section, add colors

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,7 @@
 html,body {
 	width: 100%;
 	height: 100%;
+	margin: 0;
 	font-family: Oxygen, sans-serif;
 }
 
@@ -12,18 +13,38 @@ code {
 	font-family: Inconsolata, monospace;
 }
 
-.chapter-section {
+.section-mod {
 	max-width: 700px;
 	padding: 10px 20px;
 	margin: 0 auto;
-
+	background-color: #fff;
 	/*border: solid 1px #351C75;*/
+}
+
+.chapter-section {
+	width: 100%;
+	/*margin: 10px 0;*/
 }
 
 .chapter-title {
 	font-family: Lora, serif;
 	font-size: 36px;
+}
+
+.internet.chapter-section {
+	background-color: #741B47;
+}
+
+.internet .chapter-title{
+	color: #741B47;
+}
+
+.html .chapter-title {
 	color: #351C75;
+}
+
+.html.chapter-section {
+	background-color: #351C75;
 }
 
 .chapter-subtitle {
@@ -31,7 +52,8 @@ code {
 	font-weight: 300;
 	font-size: 24px;
 	color: #333;
-	border-bottom: solid 1px #bbaece;
+	/*border-bottom: solid 1px #bbaece;*/
+	border-bottom: solid 1px #aaa;
 	padding-bottom: 5px;
 	margin-right: 30px;
 }
